// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/TopBanner/TopBannerSkipLink (intern) ClickSkipLink play-test 1`] = `
<div data-test-block="true">
  <a href="main"
     class="_skipLink_nmfvk_1"
  >
    <span class="_skipLinkContent_nmfvk_22">
      <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_nmfvk_45"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
        </path>
      </svg>
      Hopp til hovedinnhold
    </span>
  </a>
  <main id="hovedinnhold"
        tabindex="-1"
  >
    Hovedinnholdet på siden
  </main>
</div>
`;

exports[`Tester/TopBanner/TopBannerSkipLink (intern) Defaults play-test 1`] = `
<div data-test-block="true">
  <a href="main"
     class="_skipLink_nmfvk_1"
  >
    <span class="_skipLinkContent_nmfvk_22">
      <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_nmfvk_45"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
        </path>
      </svg>
      Hopp til hovedinnhold
    </span>
  </a>
</div>
`;

exports[`Tester/TopBanner/TopBannerSkipLink (intern) WithAttributes play-test 1`] = `
<div data-test-block="true">
  <a id="htmlId"
     href="main"
     class="_skipLink_nmfvk_1 dummyClassname"
     lang="nb"
     data-testid="123ID"
  >
    <span class="_skipLinkContent_nmfvk_22">
      <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_nmfvk_45"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
        </path>
      </svg>
      Hopp til hovedinnhold
    </span>
  </a>
</div>
`;

exports[`Tester/TopBanner/TopBannerSkipLink (intern) WithRef play-test 1`] = `
<div data-test-block="true">
  <a href="main"
     class="_skipLink_nmfvk_1"
     id="dummyIdForwardedFromRef"
  >
    <span class="_skipLinkContent_nmfvk_22">
      <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_nmfvk_45"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
        </path>
      </svg>
      Hopp til hovedinnhold
    </span>
  </a>
</div>
`;

exports[`Tester/TopBanner/TopBannerSkipLink (intern) WithShadowDom play-test 1`] = `
<div data-test-block="true">
  <skiplink-customelement>
  </skiplink-customelement>
</div>
`;

exports[`Tester/TopBanner/TopBannerSkipLink (intern) WithTargetAndChildren play-test 1`] = `
<div data-test-block="true">
  <a href="#hovedinnhold"
     class="_skipLink_nmfvk_1"
  >
    <span class="_skipLinkContent_nmfvk_22">
      <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_nmfvk_45"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
        </path>
      </svg>
      Snarvei til hovedinnhold
    </span>
  </a>
  <main id="hovedinnhold"
        tabindex="-1"
  >
    Hovedinnholdet på siden
  </main>
</div>
`;
